<resources>
    <string name="app_name">Crittercism</string>
    <string name="copyright">Copyright © 2014 Crittercism Inc. All rights reserved.</string>
    <string name="action_settings">Settings</string>

    <string name="menu_error">Error</string>
    <string name="menu_network">Network</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_other">Other</string>
    <string name="menu_console">Console</string>

    <string name="title_error">Errors</string>
    <string name="title_network">Network</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_other">Everything Else</string>
    <string name="title_console">Console</string>
    <string name="title_activity_mail">MailActivity</string>

    <string name="subject">Subject:</string>
    <string name="copies">Cc/Bcc:</string>
    <string name="new_message">New Message</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="to">To:</string>

    <string name="clear">CLEAR</string>
    <string name="exception">EXCEPTION</string>
    <string name="crash">CRASH</string>
    <string name="title_activity_function_dialog">FunctionDialog</string>

    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="network"><![CDATA[< Network]]></string>
    <string name="back_button"><![CDATA[<]]></string>
    <string name="forward_button"><![CDATA[>]]></string>
    <string name="trans_browse_title">TRANSACTION \'Browse\':</string>
    <string name="trans_reserve_title">TRANSACTION \'Reserve\':</string>
    <string name="trans_confirm_title">TRANSACTION \'Confirm\':</string>
    <string name="trans_login_title">TRANSACTION \'Login\':</string>
    <string name="other_username">USERNAME:</string>
    <string name="other_metadata">METADATA:</string>
    <string name="other_breadcrumbs">BREADCRUMBS:</string>
    <string name="image">image</string>
    <string name="function_dialog_title">Pick a function</string>
</resources>
