<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:background="#4381b3"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:focusable="false"
        android:id="@+id/TextTitleView"
        android:text="@string/title_other"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:verticalScrollbarPosition="right"
            android:background="@android:color/white">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#efeff4"
                android:layout_gravity="start"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:focusable="false"
                android:text="@string/other_username"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/UsernameListView"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:dividerHeight="1sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#efeff4"
                android:layout_gravity="start"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:focusable="false"
                android:text="@string/other_metadata"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/MetadataListView"
                android:dividerHeight="1sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#efeff4"
                android:layout_gravity="start"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:focusable="false"
                android:text="@string/other_breadcrumbs"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/BreadcrumbsListView"
                android:dividerHeight="1sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#efeff4"
                android:layout_gravity="start"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:focusable="false"
                android:id="@+id/statusText"/>
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/StatusListView"
                android:dividerHeight="1sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>