<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"/>


    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#d5d5d5"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imageButtonError"
                android:contentDescription="@string/menu_error"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/bug"
                android:background="#d5d5d5"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_error"
                android:textSize="12sp"
                android:id="@+id/txtError" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imageButtonNetWork"
                android:contentDescription="@string/menu_network"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/network"
                android:background="#d5d5d5"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_network"
                android:id="@+id/txtNetWork"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imageButtonTransactions"
                android:contentDescription="@string/menu_transactions"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/shopping_cart"
                android:background="#d5d5d5"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/menu_transactions"
                android:id="@+id/txtTransaction"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imageButtonOther"
                android:contentDescription="@string/menu_other"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/controller"
                android:background="#d5d5d5"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_other"
                android:id="@+id/txtOther"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imageButtonConsole"
                android:contentDescription="@string/menu_console"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/glasses"
                android:background="#d5d5d5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_console"
                android:id="@+id/txtConsole"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>